# ai-memory-hackathon

./: README.md  SETUP.md  restore-snapshots.py
.claude/: CLAUDE.md
project1-procurement-search/: .env.example  app.py  pyproject.toml
project2-spend-analytics/: app.py  pyproject.toml
project3-anomaly-detective/: app.py  pyproject.toml
