[project]
name = "project3-anomaly-detective"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "llama-cpp-python>=0.3.16",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.40.0",
]
